--- a/composer.json
+++ b/composer.json
@@ -35,9 +35,11 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Models\\": "app/Models"
         },
         "classmap": [
+            "app/Models",
             "database/seeds",
             "database/factories"
         ]
